# motion

./: README.md  cyou.molyuu.motion.json  meson.build
data/: cyou.molyuu.motion.desktop.in  cyou.molyuu.motion.gschema.xml  cyou.molyuu.motion.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  motion-application.c  motion-application.h  motion-window.c  motion-window.h  motion-window.ui  motion.gresource.xml
